--- a/IronPdf.Extension/IronPdf.Extension.csproj
+++ b/IronPdf.Extension/IronPdf.Extension.csproj
@@ -5,4 +5,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IronPdf\IronPdf.csproj" />
+  </ItemGroup>
 </Project>
