--- a/ConsumerOnlyIronPdf/ConsumerOnlyIronPdf.csproj
+++ b/ConsumerOnlyIronPdf/ConsumerOnlyIronPdf.csproj
@@ -8,8 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="IronPdf">
-      <HintPath>..\IronPdf\bin\Debug\netstandard2.0\IronPdf.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\IronPdf\IronPdf.csproj" />
   </ItemGroup>
 </Project>
